<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <android.support.v7.widget.CardView
        android:id="@+id/cardLogoutDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.cengalabs.flatui.views.FlatTextView
                android:id="@+id/textViewLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/logout"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewLogout"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logout" />

                <com.cengalabs.flatui.views.FlatEditText
                    android:id="@+id/editTextLogout"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="รหัสพนักงานจัดรถ : "
                    android:paddingStart="10dp"
                    android:includeFontPadding="true"
                    android:maxLines="1"
                    android:textSize="20sp"
                    app:fl_fieldStyle="fl_box" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.cengalabs.flatui.views.FlatButton
                        android:id="@+id/buttonOKLogout"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center|end"
                        android:layout_margin="15dp"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/OK"
                        android:textSize="25sp"
                        app:fl_blockButtonEffectHeight="3dp"
                        app:fl_textAppearance="fl_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.cengalabs.flatui.views.FlatButton
                        android:id="@+id/buttonCancelLogout"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center|start"
                        android:layout_margin="15dp"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/Cancel"
                        android:textSize="25sp"
                        app:fl_blockButtonEffectHeight="3dp"
                        app:fl_textAppearance="fl_dark" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>