<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="700dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cardMessageDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@color/translucent_bg"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/backgroundSubmit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@color/main_dark_bg">

                <com.cengalabs.flatui.views.FlatTextView
                    android:id="@+id/submitDialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:textSize="30sp"
                    app:fl_textColor="fl_main" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/white">

                <com.cengalabs.flatui.views.FlatTextView
                    android:id="@+id/submitDialogMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/Login"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    app:fl_textColor="fl_main" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.cengalabs.flatui.views.FlatTextView
                        android:id="@+id/becauseText"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:layout_margin="10dp"
                        android:text="สาเหตุ : "
                        android:textSize="20sp"
                        app:fl_textColor="fl_main" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center_vertical">
                        <RadioGroup
                            android:id="@+id/groupRadioSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start">

                            <com.cengalabs.flatui.views.FlatRadioButton
                                android:id="@+id/radioAcceptWrongJob"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="#0000"
                                android:text="รับงานผิด"
                                android:checked="true"
                                android:layout_margin="10dp"
                                app:fl_size="15dip"
                                app:fl_dotMargin="1dp" />

                            <com.cengalabs.flatui.views.FlatRadioButton
                                android:id="@+id/radioIncident"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="เกิดอุบัติเหตุไม่สามารถให้บริการต่อได้"
                                android:background="#0000"
                                android:layout_margin="10dp"
                                app:fl_size="15dip"
                                app:fl_dotMargin="1dp" />

                            <com.cengalabs.flatui.views.FlatRadioButton
                                android:id="@+id/radioOther"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="#0000"
                                android:text="อื่นๆ"
                                android:layout_margin="10dp"
                                app:fl_size="15dip"
                                app:fl_dotMargin="1dp" />

                        </RadioGroup>

                        <com.cengalabs.flatui.views.FlatEditText
                            android:id="@+id/causeEditText"
                            android:layout_width="400dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:layout_marginTop="20dp"
                            android:hint="เพิ่มเติม"
                            android:text="  "
                            android:includeFontPadding="true"
                            android:maxLines="1"
                            android:textSize="20sp"
                            app:fl_fieldStyle="fl_box"
                            android:layout_marginLeft="5dip"
                            android:layout_marginRight="5dip" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.cengalabs.flatui.views.FlatButton
                        android:id="@+id/buttonSubmitOk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:text="@string/OK"
                        android:textSize="25sp"
                        app:fl_blockButtonEffectHeight="3dp"
                        app:fl_textAppearance="fl_light" />

                    <com.cengalabs.flatui.views.FlatButton
                        android:id="@+id/buttonSubmitCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Cancel"
                        android:textSize="25sp"
                        app:fl_blockButtonEffectHeight="3dp"
                        app:fl_textAppearance="fl_dark" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>